# noports

./: .gitbook.yaml  .gitignore  .gitmodules  .startup.sh  .startupLXC.sh  CONTRIBUTING.md  Dockerfile  Dockerfile.package  DockerfileLXC  LICENSE  README.md  SECURITY.md  hello  hello.pub  melos.yaml  package-macos-arm64.sh  pubspec.yaml  setup-aot  startup.sh
.github/: dependabot.yml
.github/workflows/: c_release.yml  c_unit_tests.yaml  codeql.yml  cppcheck.yml  dockerhub_promote_to_latest.yaml  dockerhub_sshnpd.yaml  dockerhub_sshnpd.yml  (+14 more)
docs/: HowInstallationWorks.md  README (1).md  README.md  SUMMARY.md  underthehood.md
examples/: .gitignore
examples/automations/python/: README.md  pyproject.toml  requirements.txt
examples/automations/python/sshnoports_automation_python/: __init__.py  sshnp_client.py
lib/: api_util.dart  atsign_exists.dart  check_file_exists.dart  check_non_ascii.dart  cleanup_sshnp.dart  home_directory.dart  process_util.dart  script_replacer.dart  service_factories.dart  ssh_local.dart  sshnp.dart  sshnp_utils.dart  sshnpd.dart  sync_listener.dart  version.dart
policy_gui/: README.md  angular.json  package-lock.json  package.json
scripts/: getsshnp.sh  getsshnpd.sh  install_sshnp  install_sshnpd  install_sshnpd-windows.ps1  sshnpd.sh  sshrvd.sh  tmux-sshnp.sh  tmux-sshnpd.sh  tmux-sshrvd.sh  update_sshnp  update_sshnpd
systemd/: README.md
test/: sshnp_test.dart
tools/: .gitignore  macos-signing-template.env  notarize-macos.sh  package-macos-arm64.sh  package-macos-x64.sh  package-windows-x64.sh  update_requirements.sh
(+448 files in other folders)
