[tool.poetry]
name = "sshnoports_automation_python"
version = "0.0.1"
description = "Some python recipes which allows you to create scripts for common administrative patterns via SSH No Ports"
authors = ["Chris Swan <@cpswan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
